# fastapi-do-zero

./: Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
fast_zero/: app.py  schemas.py  security.py
fast_zero/routes/: auth.py  todos.py  users.py
migrations/versions/: 21f842ac57dc_create_todos_table.py  aad90eb4d6a4_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_todos.py  test_users.py
